--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
   firebase_core: ^2.15.1
   firebase_messaging: ^14.6.7
   cloud_firestore:
+  webview_flutter: ^4.4.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
