--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name= "android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name= "android.permission.INTERNET"/>
+    <uses-permission android:name= "android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name= "android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:label="selivery_driver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAONLgc_nhy6gCHLKcG8xj_cz9_t10paC8"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,6 +25,7 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
