--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.23.0
   url_launcher: ^6.2.1
+  intl: ^0.18.1
+  webview_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,6 @@ dev_dependencies:
   multiple_images_picker: ^1.0.1
   youtube_player_flutter: ^8.1.2
   firebase_messaging: ^14.7.5 
-  webview_flutter: ^4.4.2
   cloud_firestore:
 
   # The "flutter_lints" package below contains a set of recommended lints to
