--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
     <uses-permission android:name= "android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name= "android.permission.ACCESS_FINE_LOCATION"/>
     <application
-        android:label="selivery_driver"
+        android:label="selivery driver"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAS3BGUrmQusXe0pctVL6VALzlJHlIBD1o"/>
         <activity
