--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.2.1
   intl: ^0.18.1
   webview_flutter: ^4.4.2
+  flutter_native_splash: ^2.3.9
 
 
 dev_dependencies:
@@ -73,6 +74,12 @@ dev_dependencies:
   #webview_flutter: ^4.4.2
   flutter_rating_bar: ^4.0.0
   fluttertoast: ^8.0.6
+  flutter_launcher_icons: "^0.13.1"
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
