--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name= "android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name= "android.permission.ACCESS_FINE_LOCATION"/>
     <application
-        android:label="selivery driver"
+        android:label="Selivery سائق"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <meta-data android:name="com.google.android.geo.API_KEY"
