--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.18.1
   webview_flutter: ^4.4.2
   flutter_native_splash: ^2.3.9
+  flutter_polyline_points: ^1.0.0
+  geocoding: ^2.1.1
 
 
 dev_dependencies:
